; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/cavium/extr_thunder_pcie_pem_fdt.c_thunder_pem_fdt_get_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/cavium/extr_thunder_pcie_pem_fdt.c_thunder_pem_fdt_get_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCI_ID_MSI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i64*)* @thunder_pem_fdt_get_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thunder_pem_fdt_get_id(i32 %0, i32 %1, i32 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* @PCI_ID_MSI, align 4
  %16 = icmp ne i32 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i64*, i64** %9, align 8
  %22 = call i32 @pcib_get_id(i32 %18, i32 %19, i32 %20, i64* %21)
  store i32 %22, i32* %5, align 4
  br label %38

23:                                               ; preds = %4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @ofw_bus_get_node(i32 %24)
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @pci_get_rid(i32 %26)
  store i32 %27, i32* %13, align 4
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @ofw_bus_msimap(i32 %28, i32 %29, i32* null, i64* %12)
  store i32 %30, i32* %11, align 4
  %31 = load i32, i32* %11, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %23
  %34 = load i32, i32* %11, align 4
  store i32 %34, i32* %5, align 4
  br label %38

35:                                               ; preds = %23
  %36 = load i64, i64* %12, align 8
  %37 = load i64*, i64** %9, align 8
  store i64 %36, i64* %37, align 8
  store i32 0, i32* %5, align 4
  br label %38

38:                                               ; preds = %35, %33, %17
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @pcib_get_id(i32, i32, i32, i64*) #1

declare dso_local i32 @ofw_bus_get_node(i32) #1

declare dso_local i32 @pci_get_rid(i32) #1

declare dso_local i32 @ofw_bus_msimap(i32, i32, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
